# data-kale

./: .gitignore  LICENSE  README.md  example.py  publish.sh  requirements.txt  setup.cfg  setup.py  test-requirements.txt
data_kale/: configuration.py  download.py  list_remote.py  path.py  remote_resource.py  upload.py  utils.py
data_kale/object_/: identical.py  local_object.py  object_.py  remote_object.py
tests/: conftest.py  test_download.py  test_list_remote.py  test_upload.py
tests/fixture/: test_get_object.py  test_get_path.py  test_repository.py  test_repository_name.py  test_repository_path.py  test_root.py
