[metadata]
name = data-kale
author = "Jim Holmstr\u00F6m"
author-email = jim@aiwizo.com
summary = Simple Data Lake to sync data repositories to S3 compatible buckets.
project_urls =
    Source Code = https://github.com/aiwizo/data-kale/
keywords =
    data
    lake
    repository

[files]
packages =
    data_kale

[aliases]
test = pytest

[tool:pytest]
addopts = tests

[entry_points]
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
